...
}

@Composable
fun ContentHome() {
    val screenList = remember {
        listOf(
            HomeBottomEntity("首页", R.drawable.shop_ic_shop_home_classify),
            HomeBottomEntity("我的", R.drawable.shop_ic_shop_home_classify_12)
        )
    }
    val pagerState = rememberPagerState(pageCount = { screenList.size })
    val coroutineScope = rememberCoroutineScope()

    Scaffold(
...
